--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test",
     "start": "webpack serve",
-    "serve": "nodemon ./server/index.js",
-    "up": "dbmate up",
-    "down": "dbmate drop",
-    "reset": "dbmate drop && dbmate up",
-    "build": "webpack build"
+    "tailwind": "yarn tailwindcss -i ./src/input.css -o public/output.css --watch"
   },
   "repository": {
     "type": "git",
@@ -46,6 +41,7 @@
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "tailwindcss": "^3.3.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
