--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve",
+    "start": "yarn tailwindcss -i ./src/input.css -o public/output.css --watch & webpack serve",
     "tailwind": "yarn tailwindcss -i ./src/input.css -o public/output.css --watch"
   },
   "repository": {
